Corrigido para que ao apagar uma imagem apague também da tabela IMAGEM_ANUNCIO. Corrigido para salvar anúncio com operação emprestimo.